Fixed pagination alignment

--- a/template/templates/wut/css/template.css
+++ b/template/templates/wut/css/template.css
@@ -800,17 +800,18 @@ div.chronoform {
 .pagination {
   margin: 0;
   text-align: center;
-  margin: 0 0 2em 0; }
-  .pagination ul {
+  margin: 0; }
+  .pagination ul.pages {
+    float: none;
     padding: 0;
     margin: 0;
     list-style: none; }
-    .pagination ul li {
+    .pagination ul.pages li {
       display: inline-block;
       *display: inline;
       *zoom: 1;
       padding: 0 8px; }
-      .pagination ul li a, .pagination ul li span {
+      .pagination ul.pages li a, .pagination ul.pages li span {
         font-size: 14px;
         color: #e57900; }
 
